Fix up config stuff & prettier

--- a/apps/infrastructure/Pulumi.yaml
+++ b/apps/infrastructure/Pulumi.yaml
@@ -1,6 +1,10 @@
-name: comments-infrastructure
-description: Infrastructure for the comments service
+name: comments
+description: A minimal AWS TypeScript Pulumi program
 runtime:
   name: nodejs
   options:
     packagemanager: yarn
+config:
+  pulumi:tags:
+    value:
+      pulumi:template: aws-typescript
