--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "trailingComma": "all",
   "singleQuote": true,
   "editorconfig": true,
+  "tabWidth": 4,
   "overrides": [
     {
       "files": "Pulumi.*.yaml",
