--- a/apps/infrastructure/package.json
+++ b/apps/infrastructure/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "comments-infrastructure",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "license": "MIT",
-  "dependencies": {
-    "@pulumi/aws": "^6.80.0",
-    "@pulumi/awsx": "^2.21.1",
-    "prisma": "^6.8.2"
-  }
+    "name": "comments",
+    "version": "1.0.0",
+    "main": "index.ts",
+    "license": "MIT",
+    "dependencies": {
+        "@pulumi/aws": "^6.80.0",
+        "@pulumi/awsx": "^2.21.1",
+        "prisma": "^6.8.2"
+    }
 }
