--- a/apps/infrastructure/tsconfig.json
+++ b/apps/infrastructure/tsconfig.json
@@ -1,16 +1,12 @@
 {
     "compilerOptions": {
-        "strict": true,
-        "outDir": "bin",
-        "target": "es2020",
+        "target": "ES2020",
         "module": "commonjs",
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "experimentalDecorators": true,
-        "pretty": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitReturns": true,
+        "strict": true,
+        "outDir": "./dist",
+        "esModuleInterop": true,
+        "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true
     },
-    "files": ["index.ts"]
+    "include": ["lambdas"]
 }
