Add some dependencies and build scripts

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,18 +5,28 @@
     "license": "MIT",
     "private": true,
     "scripts": {
-        "start": "node dist/index.js",
+        "start:dev": "docker run --platform linux/amd64 --env-file .env.docker -p 6688:80 comments-ecr-repo-ee2da95:latest",
         "build": "esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js",
-        "docker-build": "docker buildx build --platform linux/amd64 -t comments:latest .",
-        "docker-tag": "AWS_PROFILE=kieran-personal docker tag comments:latest 070410863296.dkr.ecr.ap-southeast-2.amazonaws.com/comments-ecr-repo-8ead588:latest",
-        "docker-push": "AWS_PROFILE=kieran-personal docker push 070410863296.dkr.ecr.ap-southeast-2.amazonaws.com/comments-ecr-repo-8ead588:latest",
-        "dev": "docker run -p 6688:80 comments:latest"
+        "docker-build": "docker build --no-cache --platform linux/amd64 -t comments-ecr-repo-ee2da95 .",
+        "docker-tag": "AWS_PROFILE=kieran-personal docker tag comments-ecr-repo-ee2da95:latest 070410863296.dkr.ecr.ap-southeast-2.amazonaws.com/comments-ecr-repo-ee2da95:latest",
+        "docker-push": "AWS_PROFILE=kieran-personal docker push 070410863296.dkr.ecr.ap-southeast-2.amazonaws.com/comments-ecr-repo-ee2da95:latest",
+        "ecr-login": "aws ecr get-login-password --region ap-southeast-2 | docker login --username AWS --password-stdin 070410863296.dkr.ecr.ap-southeast-2.amazonaws.com",
+        "dev": "node dist/index.js",
+        "db-deploy": "npx prisma migrate deploy && npx prisma generate"
     },
     "dependencies": {
-        "express": "^5.1.0"
+        "@prisma/client": "^6.8.2",
+        "express": "^5.1.0",
+        "zod": "^3.25.51"
     },
     "devDependencies": {
+        "@eslint/js": "^9.28.0",
         "@types/express": "^5.0.2",
-        "esbuild": "^0.25.5"
+        "esbuild": "^0.25.5",
+        "eslint": "^9.28.0",
+        "eslint-plugin-react": "^7.37.5",
+        "globals": "^16.2.0",
+        "prisma": "6.8.2",
+        "typescript-eslint": "^8.33.0"
     }
 }
