--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -2,10 +2,9 @@ FROM node:20-alpine
 WORKDIR /app
 ENV NODE_ENV=development
 COPY package*.json ./
-COPY . .
 RUN npm install --include=dev
-RUN ls -l node_modules/.bin
-RUN npx esbuild --version
+COPY . .
+RUN npx prisma generate
 RUN npm run build
 EXPOSE 3000
-CMD ["node", "dist/index.js"]
+CMD ["sh", "-c", "npx prisma migrate deploy && npx prisma generate && node dist/index.js"]
