--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+     ".": "./src/index.ts"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
