Set up tanstack router

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@repo/ui": "*",
+        "@tanstack/react-query": "^5.80.7",
+        "@tanstack/react-router": "^1.121.16",
+        "@tanstack/router-plugin": "^1.121.16",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0",
-        "@repo/ui": "*"
+        "react-dom": "^19.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
