--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,11 +16,13 @@
     },
     "dependencies": {
         "@prisma/client": "^6.8.2",
+        "cors": "^2.8.5",
         "express": "^5.1.0",
         "zod": "^3.25.51"
     },
     "devDependencies": {
         "@eslint/js": "^9.28.0",
+        "@types/cors": "^2.8.19",
         "@types/express": "^5.0.2",
         "esbuild": "^0.25.5",
         "eslint": "^9.28.0",
