--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,11 +11,13 @@
     },
     "dependencies": {
         "@repo/ui": "*",
+        "@tailwindcss/vite": "^4.1.10",
         "@tanstack/react-query": "^5.80.7",
         "@tanstack/react-router": "^1.121.16",
         "@tanstack/router-plugin": "^1.121.16",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "tailwindcss": "^4.1.10"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
