configure tailwind for mono-repo and add a layout component

--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "comments-api",
-  "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
-  },
-  "devDependencies": {
-    "prettier": "^3.2.5",
-    "turbo": "^2.5.3"
-  },
-  "packageManager": "yarn@1.22.22",
-  "engines": {
-    "node": ">=18"
-  }
+    "name": "comments-api",
+    "private": true,
+    "workspaces": [
+        "apps/*",
+        "packages/*"
+    ],
+    "scripts": {
+        "build": "turbo run build",
+        "dev": "turbo run dev",
+        "lint": "turbo run lint",
+        "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    },
+    "devDependencies": {
+        "prettier": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.6.11",
+        "turbo": "^2.5.3"
+    },
+    "packageManager": "yarn@1.22.22",
+    "engines": {
+        "node": ">=18"
+    }
 }
