--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,13 +11,12 @@
     },
     "dependencies": {
         "@repo/ui": "*",
-        "@tailwindcss/vite": "^4.1.10",
+        "@repo/tailwind-config": "*",
         "@tanstack/react-query": "^5.80.7",
         "@tanstack/react-router": "^1.121.16",
         "@tanstack/router-plugin": "^1.121.16",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0",
-        "tailwindcss": "^4.1.10"
+        "react-dom": "^19.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
@@ -31,6 +30,10 @@
         "globals": "^16.0.0",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.30.1",
-        "vite": "^6.3.5"
+        "vite": "^6.3.5",
+        "tailwindcss": "^4.1.10",
+        "@tailwindcss/vite": "^4.1.10",
+        "postcss": "^8.5.3",
+        "@tailwindcss/postcss": "^4.1.5"
     }
 }
