--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "@repo/ui",
-  "version": "0.0.0",
-  "private": true,
-  "exports": {
-     ".": "./src/index.ts"
-  },
-  "scripts": {
-    "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component"
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "@turbo/gen": "^1.12.4",
-    "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "eslint": "^8.57.0",
-    "typescript": "5.5.4"
-  },
-  "dependencies": {
-    "react": "^18.2.0"
-  }
+    "name": "@repo/ui",
+    "version": "0.0.0",
+    "private": true,
+    "sideEffects": [
+        "**/*.css"
+    ],
+    "files": [
+        "dist"
+    ],
+    "exports": {
+        ".": "./src/index.ts",
+        "./styles.css": "./dist/index.css",
+        "./*": "./dist/*.js"
+    },
+    "scripts": {
+        "build:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
+        "build:components": "tsc",
+        "check-types": "tsc --noEmit",
+        "dev:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
+        "dev:components": "tsc --watch",
+        "lint": "eslint src --max-warnings 0"
+    },
+    "dependencies": {
+        "react": "^19.1.0"
+    },
+    "devDependencies": {
+        "@repo/eslint-config": "*",
+        "@repo/tailwind-config": "*",
+        "@repo/typescript-config": "*",
+        "@tailwindcss/cli": "^4.1.5",
+        "@types/react": "^19.1.0",
+        "eslint": "^9.28.0",
+        "tailwindcss": "^4.1.5",
+        "typescript": "5.8.2"
+    }
 }
