--- a/packages/ui/turbo.json
+++ b/packages/ui/turbo.json
@@ -1,13 +1,25 @@
 {
-  "$schema": "https://turborepo.com/schema.json",
-  "extends": [
-    "//"
-  ],
-  "tasks": {
-    "build": {
-      "outputs": [
-        "dist/**"
-      ]
+    "extends": ["//"],
+    "tasks": {
+        "build": {
+            "dependsOn": ["build:styles", "build:components"]
+        },
+        "build:styles": {
+            "outputs": ["dist/**"]
+        },
+        "build:components": {
+            "outputs": ["dist/**"]
+        },
+        "dev": {
+            "with": ["dev:styles", "dev:components"]
+        },
+        "dev:styles": {
+            "cache": false,
+            "persistent": true
+        },
+        "dev:components": {
+            "cache": false,
+            "persistent": true
+        }
     }
-  }
 }
