--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -7,4 +7,5 @@ COPY . .
 RUN npx prisma generate
 RUN npm run build
 EXPOSE 3000
-CMD ["sh", "-c", "npx prisma migrate deploy && npx prisma generate && node dist/index.js"]
+
+CMD ["sh", "-c", "npx prisma migrate deploy && node dist/index.js"]
