--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@repo/ui": "*",
+        "@repo/shared-types": "*",
         "@repo/tailwind-config": "*",
         "@tanstack/react-query": "^5.80.7",
         "@tanstack/react-router": "^1.121.16",
