--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,10 +22,12 @@
         "lint": "eslint src --max-warnings 0"
     },
     "dependencies": {
+        "date-fns": "^4.1.0",
         "react": "^19.1.0"
     },
     "devDependencies": {
         "@repo/eslint-config": "*",
+        "@repo/shared-types": "*",
         "@repo/tailwind-config": "*",
         "@repo/typescript-config": "*",
         "@tailwindcss/cli": "^4.1.5",
