--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,8 @@
         "@tanstack/react-router": "^1.121.16",
         "@tanstack/router-plugin": "^1.121.16",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "lucide-react": "^0.475.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
