--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -44,5 +44,8 @@
         "eslint": "^9.28.0",
         "tailwindcss": "^4.1.5",
         "typescript": "5.8.2"
+    },
+    "peerDependencies": {
+        "@tanstack/react-router": "^1.121.16"
     }
 }
