--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
         "@prisma/client": "^6.8.2",
         "cors": "^2.8.5",
         "express": "^5.1.0",
+        "pino": "^9.7.0",
         "zod": "^3.25.51"
     },
     "devDependencies": {
