--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,18 +10,21 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@repo/ui": "*",
+        "@auth0/auth0-react": "^2.3.0",
         "@repo/shared-types": "*",
         "@repo/tailwind-config": "*",
+        "@repo/ui": "*",
         "@tanstack/react-query": "^5.80.7",
         "@tanstack/react-router": "^1.121.16",
         "@tanstack/router-plugin": "^1.121.16",
+        "lucide-react": "^0.475.0",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0",
-        "lucide-react": "^0.475.0"
+        "react-dom": "^19.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
+        "@tailwindcss/postcss": "^4.1.5",
+        "@tailwindcss/vite": "^4.1.10",
         "@tanstack/eslint-plugin-query": "^5.78.0",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
@@ -30,12 +33,10 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.10",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.30.1",
-        "vite": "^6.3.5",
-        "tailwindcss": "^4.1.10",
-        "@tailwindcss/vite": "^4.1.10",
-        "postcss": "^8.5.3",
-        "@tailwindcss/postcss": "^4.1.5"
+        "vite": "^6.3.5"
     }
 }
