--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,8 +14,7 @@
         "./*": "./dist/*.js"
     },
     "scripts": {
-        "build:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
-        "build:components": "tsc",
+        "build": "tsc",
         "check-types": "tsc --noEmit",
         "dev:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
         "dev:components": "tsc --watch",
