--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -5,7 +5,7 @@ COPY package*.json ./
 RUN npm install --include=dev
 COPY . .
 RUN npx prisma generate
-RUN npm run build
+RUN npm run docker:build
 EXPOSE 3000
 
 CMD ["sh", "-c", "npx prisma migrate deploy && node dist/index.js"]
