--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,7 @@
         "lint": "eslint src --max-warnings 0"
     },
     "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^2.1.15",
         "@radix-ui/react-slot": "^1.1.2",
         "@tanstack/react-query": "^5.81.5",
         "class-variance-authority": "^0.7.1",
@@ -29,6 +30,9 @@
         "lucide-react": "^0.522.0",
         "react": "^19.1.0",
         "recharts": "^2.15.4",
+        "slate": "^0.117.2",
+        "slate-dom": "^0.117.4",
+        "slate-react": "^0.117.4",
         "tailwind-merge": "^3.0.1",
         "tw-animate-css": "^1.2.4"
     },
